--- a/.github/workflows/quay-publish.yaml
+++ b/.github/workflows/quay-publish.yaml
@@ -6,8 +6,6 @@ on:
       - main
     tags:
       - '*'
-    paths:
-      - backend/data_processing/version.json
 jobs:
   build:
     env:
@@ -19,12 +17,8 @@ jobs:
       - name: Get image tags
         id: image_tags
         run: |
-          echo -n ::set-output name=IMAGE_TAGS::
-          VERSION=$(jq -r '.version' ${context}/version.json)
+          echo -nh ::set-output name=IMAGE_TAGS::
           TAGS=('latest')
-          if [ "${VERSION}" ] && [ "${VERSION}" != "latest" ]; then
-              TAGS+=("${VERSION}")
-          fi
           if [[ "${GITHUB_REF}" =~ refs/tags/(.*) ]]; then
               TAGS+=("git-${BASH_REMATCH[1]}")
           fi
