--- a/.github/workflows/push-to-quay.yaml
+++ b/.github/workflows/push-to-quay.yaml
@@ -19,7 +19,7 @@ jobs:
           image: ohtuproject-elisa-backend
           tags: staging ${{ github.sha }}
           context: backend/data_processing/
-          containerfiles: ./Containerfile
+          containerfiles: Containerfile
 
       - name: Push to quay.io
         uses: redhat-actions/push-to-registry@v2
