--- a/.github/workflows/push-to-quay.yaml
+++ b/.github/workflows/push-to-quay.yaml
@@ -18,7 +18,7 @@ jobs:
         with:
           image: ohtuproject-elisa-backend
           tags: staging ${{ github.sha }}
-          context: 'backend/data_processing/'
+          context: "{{defaultContext}}:backend/data_processing/"
           containerfiles: Containerfile
 
       - name: Push to quay.io
