--- a/.github/workflows/push-to-quay.yaml
+++ b/.github/workflows/push-to-quay.yaml
@@ -25,7 +25,11 @@ jobs:
         uses: redhat-actions/push-to-registry@v2
         with:
           image: ${{ steps.build-image.outputs.image }}
-          tags: ${{ steps.build-image.outputs.tags }}
-          registry: quay.io
+          tags: latest
+          registry: quay.io/repository/ohtuprojekti
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
+          
+      - name: Test Quay.io login
+        run: |
+          echo "${{ secrets.REGISTRY_PASSWORD }}" | buildah login -u "${{ secrets.REGISTRY_USERNAME }}" quay.io --password-stdin
