--- a/.github/workflows/push-to-quay.yaml
+++ b/.github/workflows/push-to-quay.yaml
@@ -12,6 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Log in to Quay.io
+        run: |
+          echo "${{ secrets.REGISTRY_PASSWORD }}" | podman login -u "${{ secrets.REGISTRY_USERNAME }}" quay.io --password-stdin
+
       - name: Build image
         id: build-image
         uses: redhat-actions/buildah-build@v2
