--- a/.github/workflows/push-to-quay.yaml
+++ b/.github/workflows/push-to-quay.yaml
@@ -1,9 +1,11 @@
-name: Push to Quay.io registry
+name: Push new image to Quay.io registry
 
 on:
   push:
     branches:
       - main
+    paths:
+      - backend/data_processing/
 
 jobs:
   build-and-push:
@@ -22,11 +24,11 @@ jobs:
           context: backend/data_processing/
           containerfiles: backend/data_processing/Containerfile
 
-      - name: Push to quay.io
+      - name: Push image to quay.io
         uses: redhat-actions/push-to-registry@v2
         with:
           image: ${{ steps.build-image.outputs.image }}
-          tags: latest
+          tags: ${{ steps.build-image.outputs.tags }}
           registry: quay.io/ohtuprojekti
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
