--- a/backend/data_processing/Containerfile
+++ b/backend/data_processing/Containerfile
@@ -6,6 +6,8 @@ COPY . /app
 
 EXPOSE 3000
 
+RUN python3 -m pip install --upgrade pip
+
 RUN pip install -r requirements.txt
 
 CMD flask run --port 3000 --host 0.0.0.0
