--- a/backend/data_processing/Containerfile
+++ b/backend/data_processing/Containerfile
@@ -4,10 +4,13 @@ WORKDIR /app
 
 COPY . /app
 
-EXPOSE 3000
+RUN python3 -m venv .venv
+RUN /bin/sh -c "source .venv/bin/activate"
 
 RUN python3 -m pip install --upgrade pip
 
 RUN pip install -r requirements.txt
+
+EXPOSE 3000
 
 CMD flask run --port 3000 --host 0.0.0.0
