--- a/.github/workflows/push-to-quay.yaml
+++ b/.github/workflows/push-to-quay.yaml
@@ -32,4 +32,11 @@ jobs:
           registry: ${{vars.QUAY_REGISTRY}}
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
+
+      - name: Login to OpenShift
+        uses: redhat-actions/oc-login@v1
+        with:
+          server_url: ${{ secrets.TEST_URL }}
+          openshift_toke: ${{ secrets.TEST_TOKEN }}
+          namespace: ohtuprojekti-staging
           
