--- a/.github/workflows/push-to-quay.yaml
+++ b/.github/workflows/push-to-quay.yaml
@@ -37,6 +37,6 @@ jobs:
         uses: redhat-actions/oc-login@v1
         with:
           server_url: ${{ secrets.TEST_URL }}
-          openshift_toke: ${{ secrets.TEST_TOKEN }}
+          openshift_token: ${{ secrets.TEST_TOKEN }}
           namespace: ohtuprojekti-staging
           
