--- a/.github/workflows/push-to-quay.yaml
+++ b/.github/workflows/push-to-quay.yaml
@@ -1,4 +1,4 @@
-name: Push new image to Quay.io registry
+name: Push backend image to Quay.io
 
 on:
   push:
@@ -29,6 +29,7 @@ jobs:
         with:
           image: ${{ steps.build-image.outputs.image }}
           tags: ${{ steps.build-image.outputs.tags }}
-          registry: quay.io/ohtuprojekti
+          registry: ${{vars.QUAY_REGISTRY}}
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
+
