--- a/.github/workflows/push-to-version.helsinki.fi.yaml
+++ b/.github/workflows/push-to-version.helsinki.fi.yaml
@@ -31,12 +31,12 @@ jobs:
         run: |
             rsync -av --delete "$SOURCE_FOLDER" "$WORK_ROOT/$TARGET_FOLDER/"
 
-      - name: Push changes
+      - name: Push changes to ${{ vars.GITLAB_URL }}
         run: |
             cd "$WORK_ROOT/$TARGET_FOLDER"
 
-            git config --global user.name "github-actions[bot]"
-            git config --global user.email "actions@github.com"
+            git config user.name "github-actions[bot]"
+            git config user.email "actions@github.com"
 
             git remote add gitlab https://oauth2:${{ secrets.GITLAB_TOKEN }}@${{ vars.GITLAB_URL }}
 
